--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,8 @@ jobs:
 
       - name: Build
         run: |
-          npm install
-          npm build
+          yarn install
+          yarn build
 
   deploy:
     name: Deploy
