--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,3 +26,7 @@ jobs:
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          secrets: |
+            EXAMPLE_SECRET
+        env:
+          EXAMPLE_SECRET: ${{ secrets.EXAMPLE_SECRET }}
