--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "start": "wrangler dev",
     "deploy": "wrangler publish",
     "build": "tsc"
+  },
+  "dependencies": {
+    "itty-router": "^2.6.6"
   }
 }
